# zed-fp-studio

./: Cargo.toml  LICENSE  README.md  extension.toml
src/: extension.rs
