[package]
name = "fiberplane-studio-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
zed_extension_api = "0.1.0"
fpx-lib = { git = "https://github.com/fiberplane/fpx", branch = "zed-extension"}
serde = { version = "1.0.209", features = ["derive"] }

[lib]
path = "src/extension.rs"
crate-type = ["cdylib"]
